remove comentários e corrige inconsistência no pagina e limite